# django-sticky-messages

./: .gitignore  MANIFEST.in  README.txt  pyproject.toml  runtests.py  setup.py
stickymessages/: admin.py  models.py
stickymessages/migrations/: 0001_initial.py  0002_auto_20200320_1720.py
stickymessages/tests/: tests.py
stickymessages/tests/fixtures/: test_data.json
