[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-sticky-messages"
version = "0.4"
description = "A simple Django app to display \"sticky\" messages that expire after a given time period."
readme = "README.txt"
license = "MIT"
authors = [
    { name = "Roland van Laar", email = "rvanlaar@kiesopmaat.nl" }
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django-tinymce",
]

[project.urls]
Homepage = "https://github.com/kiesopmaat/django-sticky-messages"

[tool.hatch.build.targets.sdist]
include = [
    "stickymessages/**",
    "LICENSE",
    "docs/**",
]

[tool.hatch.build.targets.wheel]
packages = ["stickymessages"]
